<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@drawable/banner">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="credits"
        android:id="@+id/textViewCreditTitle"
        android:textColor="@color/mainColor"
        android:textSize="46sp"
        android:textAlignment="center"
        android:gravity="center" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:gravity="center">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/scrollView"
            android:fillViewport="false"
            android:layout_marginTop="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/cadre4"
                android:gravity="center">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/credit_text1"
                    android:id="@+id/textView1"
                    android:textSize="18sp"
                    android:textAlignment="center"
                    android:textColor="?android:attr/textColorPrimaryInverse"
                    android:layout_marginBottom="15dp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/credit_text2"
                    android:id="@+id/textView2"
                    android:textSize="18sp"
                    android:textAlignment="center"
                    android:layout_marginBottom="15dp"
                    android:textColor="?android:attr/textColorPrimaryInverse" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/credit_text3"
                    android:id="@+id/textView3"
                    android:textSize="18sp"
                    android:textAlignment="center"
                    android:layout_marginBottom="15dp"
                    android:textColor="?android:attr/textColorPrimaryInverse" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/credit_text4"
                    android:id="@+id/textView4"
                    android:textSize="18sp"
                    android:textAlignment="center"
                    android:layout_marginBottom="15dp"
                    android:textColor="?android:attr/textColorPrimaryInverse" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/credit_text5"
                    android:id="@+id/textView5"
                    android:textSize="18sp"
                    android:textAlignment="center"
                    android:textColor="?android:attr/textColorPrimaryInverse" />


            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"></LinearLayout>

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="RETOUR VERS LE MENU"
            android:id="@+id/buttonMenu"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:onClick="onClickMenu"
            android:layout_gravity="bottom"
            android:background="@drawable/brush1"
            android:layout_weight="2"
            android:textSize="24sp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"></LinearLayout>
    </LinearLayout>

</LinearLayout>
